--- a/src/components/FishDetailsContainer/FishDetailsContainer.css
+++ b/src/components/FishDetailsContainer/FishDetailsContainer.css
@@ -7,6 +7,15 @@
 
 .fish-details-container h1 {
   color: #0B3954;
+  margin-bottom: 5%;
+}
+
+hr {
+  border: 0;
+  width: 100%;
+  height: 2px;
+  background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(51, 101, 138, 0.9), rgba(0, 0, 0, 0));
+  margin-bottom: 5%;
 }
 
 .fish-details-container h3 {
@@ -92,6 +101,7 @@ tr:last-child td:last-child {
 
   .fish-details-container img {
     width: 225px;
+    margin-bottom: 15%;
   }
 
   .fish-details-container h1 {
@@ -101,6 +111,10 @@ tr:last-child td:last-child {
   .fish-details-container h3 {
     font-size: 1rem;
     font-weight: 400;
+  }
+
+  .fish-details-container p {
+    padding: 20px;
   }
 
   table {
@@ -123,6 +137,10 @@ tr:last-child td:last-child {
     margin-left: 20%;
     margin-top: 5%;
     margin-bottom: 5%;
+  }
+
+  hr {
+    height: 3px;
   }
 
   .fish-details-container img {
