--- a/src/components/FishCardsContainer/FishCardsContainer.css
+++ b/src/components/FishCardsContainer/FishCardsContainer.css
@@ -1,3 +1,8 @@
+.error-message-container {
+  display: flex;
+  justify-content: center;
+}
+
 @media only screen and (max-width: 900px) {
   .fish-cards-container  {
     flex-direction: column;
@@ -8,6 +13,15 @@
     flex-wrap: wrap;
     justify-content: space-around;
     padding: 10%;
+  }
+
+  .error-message {
+    margin-top: 10%;
+    font-weight: 200;
+    font-size: 1.7rem;
+    width: 85%;
+    line-height: 2.5rem;
+    color: #9BC4CB;
   }
 }
 
@@ -20,5 +34,14 @@
     flex-wrap: wrap;
     justify-content: space-around;
     padding: 10%;
+  }
+
+  .error-message {
+    margin-top: 5%;
+   font-weight: 200;
+   font-size: 2rem;
+   width: 60%;
+   line-height: 3rem;
+   color: #9BC4CB;
   }
 }
