--- a/src/components/Search/Search.css
+++ b/src/components/Search/Search.css
@@ -1,3 +1,7 @@
+.search-container button {
+  box-shadow: 0px 3px 6px rgba(0, 0, 0, .3);
+}
+
 @media only screen and (max-width: 900px) {
   .search-container {
     margin-top: 35%;
